Imported downloaded assets.
Imported downloaded assets and structured an empty level called 'MapGamePlay'.

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Content/StarterContent/*/**
+Content/Meshes/*
+Content/Music/*
+Content/Materials/*
+Content/Particles/*
+Content/SFX/*
