--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MapGamePlay.MapGamePlay
-EditorStartupMap=/Game/Maps/MapGamePlay.MapGamePlay
+GameDefaultMap=/Game/Maps/StartLevel.StartLevel
+EditorStartupMap=/Game/Maps/StartLevel.StartLevel
+GlobalDefaultGameMode=/Game/Blueprints/CustomGameMode_BP.CustomGameMode_BP_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
