--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=W)
@@ -87,6 +88,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Down)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Gamepad_DPad_Down)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
