--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartLevel.StartLevel
 EditorStartupMap=/Game/Maps/StartLevel.StartLevel
-GlobalDefaultGameMode=/Game/Blueprints/CustomGameMode_BP.CustomGameMode_BP_C
+GlobalDefaultGameMode=/Game/StartMenuGame/StartMenuGameMode.StartMenuGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
